# streamlit-studio

./: .gitignore  Makefile  pyproject.toml
app/: main.py  settings.py
app/.streamlit/: config.toml
app/components/: __init__.py  _base.py  _chat.py  _cloud_storage.py  _home.py  _loging_form.py  _navbar.py
app/pages/: chatbot.py  cloud_storage.py
app/utils/: s3.py
