[project]
name = "streamlit-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.31",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "streamlit>=1.49.1",
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.13.0",
]
